small device horizontal scrollbar issue fix

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -23,7 +23,7 @@
      overflow-x: hidden;
 }
 
-@media only screen and (min-width: 375px) {
+@media only screen and (max-width: 375px) {
      html {
        overflow-x: hidden;
      }
